--- a/css/style.css
+++ b/css/style.css
@@ -44,19 +44,19 @@ header {
   font-style: italic;
   color: rgb(62, 62, 114);
 }
-.navbar-links a{
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 1.2rem;
-    font-weight: 500;
-    font-family: sans-serif;
-    padding: 10px;
-    color: rgb(62, 62, 114);
+.navbar-links a {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-weight: 500;
+  font-family: sans-serif;
+  padding: 10px;
+  color: rgb(62, 62, 114);
 }
-.navbar-links a:hover{
-    background-color: gray;
-    color: white;
-    transition: .5s ease;
+.navbar-links a:hover {
+  background-color: gray;
+  color: white;
+  transition: 0.5s ease;
 }
 .navbar img {
   width: 40px;
@@ -65,3 +65,57 @@ header {
 }
 
 /* hero section */
+
+.hero {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 50px;
+  padding-top: 50px;
+}
+.hero-img {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+}
+.hero-text-para-one {
+  font-size: 20px;
+  font-weight: 700;
+  font-family: "roboto";
+  color: blue;
+  padding: 10px;
+}
+.hero-text-headline {
+  font-size: 40px;
+  font-family: "roboto";
+  font-weight: 700;
+  color: black;
+  padding: 10px;
+}
+.hero-text-para-two {
+  font-size: 20px;
+  font-weight: 400;
+  font-family: "roboto";
+  color: gray;
+  padding: 10px;
+}
+.book-a-call {
+  background-color: blue;
+  border-radius: 10px;
+  border: none;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: 'roboto';
+  font-size: 20px;
+  padding: 12px 40px;
+  text-shadow: 0px 1px 0px blue;
+}
+.book-a-call:hover {
+  background-color: rgb(42, 42, 226);
+}
+@media screen and (max-width: 800px) {
+  .hero {
+    flex-direction: column;
+  }
+}
