--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ header {
   height: 60px;
   max-width: 1200px;
   margin: 0 auto;
+  padding: 15px;
 }
 .navbar-logo-box {
   display: flex;
@@ -63,7 +64,68 @@ header {
   height: 40px;
   object-fit: cover;
 }
-
+/* responsive navbar */
+.responsive-nav {
+  height: 0%;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.9);
+  overflow-y: hidden;
+  transition: 0.5s;
+}
+.responsive-nav-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+.responsive-nav a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+.responsive-nav a:hover,
+.responsive-nav a:focus {
+  color: #f1f1f1;
+}
+.responsive-nav .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+.responsive-nav-logo {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  cursor: pointer;
+}
+@media screen and (max-height: 450px) {
+  .responsive-nav {
+    overflow-y: auto;
+  }
+  .responsive-nav a {
+    font-size: 20px;
+  }
+  .responsive-nav .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .navbar-links {
+    display: none;
+  }
+}
 /* hero section */
 
 .hero {
@@ -106,7 +168,7 @@ header {
   display: inline-block;
   cursor: pointer;
   color: #ffffff;
-  font-family: 'roboto';
+  font-family: "roboto";
   font-size: 20px;
   padding: 12px 40px;
   text-shadow: 0px 1px 0px blue;
