--- a/css/style.css
+++ b/css/style.css
@@ -132,8 +132,8 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-top: 50px;
-  padding-top: 50px;
+  margin: 50px;
+  padding: 50px;
 }
 .hero-img {
   width: 100%;
@@ -180,4 +180,42 @@ header {
   .hero {
     flex-direction: column;
   }
+}
+
+/* Products Card */
+/* .product-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 5px;
+  grid-row-gap: 3px;
+}
+.product-container .card img {
+  width: 100%;
+}
+.product-container .card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 20%;
+} */
+/* .product-container .card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+} */
+/* .product-container .card .container {
+  padding: 2px 16px;
+} */
+
+.product-container{
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+.product-container .card img{
+  width: 100%;
+}
+.product-container .card{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 10px;
 }
