--- a/css/style.css
+++ b/css/style.css
@@ -205,17 +205,50 @@ header {
   padding: 2px 16px;
 } */
 
-.product-container{
+.product-container {
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
-.product-container .card img{
+.product-container .card img {
   width: 100%;
+  height: 300px;
+  object-fit: contain;
 }
-.product-container .card{
+.product-container .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 10px;
+  width: 100%;
+  text-align: center;
+}
+.product-container .card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+.product-container .card .title {
+  font-size: 24px;
+  font-weight: 500;
+  font-family: 'roboto';
+  margin-top: 16px;
+}
+.product-container .card p{
+  font-size: 20px;
+  color: #7f8c9b;
+  line-height: 25px; 
+}
+.card-button{
+  border: none;
+  padding: 12px 24px;
+  border-radius: 50px;
+  font-weight: 700;
+  color: #0077ff;
+  background-color: #e0efff;
+  margin: 0 auto;
+  display: block;
+  cursor: pointer;
+}
+.card-button:hover{
+  background-color: blue;
+  color: white;
 }
