--- a/css/style.css
+++ b/css/style.css
@@ -182,35 +182,38 @@ header {
   }
 }
 
-/* Products Card */
-/* .product-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  grid-column-gap: 5px;
-  grid-row-gap: 3px;
+.display-product-headlines{
+  text-align: center;
+  background-color: blue;
+  color: white;
+  padding:50px;
 }
-.product-container .card img {
-  width: 100%;
+.display-product-headlines p{
+  font-weight: 500;
+  font-size: 20px;
+  color: greenyellow;
+  font-family: 'roboto';
 }
-.product-container .card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  width: 20%;
-} */
-/* .product-container .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-} */
-/* .product-container .card .container {
-  padding: 2px 16px;
-} */
-
+.display-product-headlines h1{
+  font-size: 50px;
+  font-weight: 700;
+  font-family: 'roboto';
+  padding: 20px;
+}
+.display-product-headlines h4{
+  font-size: 25px;
+  font-family: 'roboto';
+  font-weight: 500;
+  color: rgb(165, 163, 163);
+  padding: 10px;
+}
 .product-container {
   max-width: 1200px;
   margin: 0 auto;
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  padding: 50px;
 }
 .product-container .card img {
   width: 100%;
@@ -252,3 +255,39 @@ header {
   background-color: blue;
   color: white;
 }
+
+footer{
+  background-color: black;
+  color: white;
+  padding: 50px;
+  text-align: center;
+}
+.footer-box{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  text-align: center;
+}
+.footer-boxes{
+  display: flex;
+  flex-direction: column;
+}
+.footer-boxes a{
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+  font-family: 'roboto';
+  font-weight: 500;
+  padding: 5px;
+}
+
+.footer-boxes a:hover{
+  color: blue;
+}
+.copyright{
+  font-size: 20px;
+  font-family: 'roboto';
+  font-weight: 500;
+  padding-top: 40px;
+}
+
